# ex4

./: .gitignore  README.md  details
src/: CMakeLists.txt  main.cpp
src/cache_manager/: CacheManager.cpp  CacheManager.hpp  Command.cpp  StringFunctions.hpp
src/cache_manager/operations/: MatrixGraphProblem.cpp  MatrixGraphProblem.hpp  Operation.cpp  Operation.hpp  Problem.cpp
src/cache_manager/problems/: Problem.hpp
src/cache_manager/solutions/: MatrixGraphDFS.cpp  MatrixGraphDFS.hpp  Solution.cpp  Solution.hpp  StringSolution.cpp  StringSolution.hpp
src/cache_manager/time/: CurrentTime.cpp
src/files/: file_reading.cpp  file_reading.hpp
src/graph/: Graph.cpp  Graph.hpp
src/hash/: crc32FileReader.hpp
src/matrix/: ErrorCode.h  ErrorCodeException.cpp  ErrorCodeException.hpp  Graph.cpp  Graph.hpp  Matrix.h  MatrixClass.cpp  MatrixClass.hpp
src/server/: ClientHandler.hpp  GraphClientHandler.cpp  GraphClientHandler.hpp  GraphProblemHandler.cpp  GraphProblemHandler.hpp  MyParallelServer.cpp  MyParallelServer.hpp  MySerialServer.cpp  MySerialServer.hpp  MyTestClientHandler.hpp  ProblemHandler.hpp  ProblemsClientHandler.cpp  ProblemsClientHandler.hpp  Server.hpp  SocketServer.cpp  SocketServer.hpp  Solver.cpp  Solver.hpp
src/server/socketStreams/: SocketIStream.cpp  SocketIStream.hpp  SocketOStream.cpp  SocketOStream.hpp
src/solver/: Solver.cpp  Solver.hpp
src/solver/cache_manager/: CacheManager.cpp  CacheManager.hpp  Command.cpp  Command.hpp  Operation.cpp  Operation.hpp  StringFunctions.cpp
src/solver/cache_manager/hash/: crc32.cpp  crc32.hpp  crc32FileReader.cpp
src/solver/problems/: MatrixGraphProblem.cpp  MatrixGraphProblem.hpp  Problem.cpp  Problem.hpp
src/solver/solutions/: DFS.cpp  DFS.hpp  MatrixGraphDFS.cpp  MatrixGraphDFS.hpp  MatrixGraphSolution.cpp  MatrixGraphSolution.hpp  Solution.cpp  Solution.hpp  StringSolution.cpp  StringSolution.hpp
src/solver/solutions/graph_algorithms/: AStar.cpp  AStar.hpp  BFS.cpp  BFS.hpp  BestFS.cpp  BestFS.hpp  DFS.cpp  DFS.hpp  MatrixGraphSolution.cpp  MatrixGraphSolution.hpp
src/solver/solutions/graph_algorithms/helpers/: BestPath.cpp  BestPath.hpp
src/time/: CurrentTime.hpp
